--- a/documents/Algorithm/909.Snakes-and-Ladders.md
+++ b/documents/Algorithm/909.Snakes-and-Ladders.md
@@ -79,3 +79,47 @@ class Solution:
 
         return dist[N ** 2] if dist[N ** 2] != INF else -1
 ```
+
+## Approach - Graph: BFS
+생각해보니까 각 vertex들 간의 거리가 1이므로 그냥 BFS로도 풀 수 있는 문제였다. 
+Boustrophedon 배열을 저장하는 것은 똑같고, 나머지 풀이만 BFS로 바꾸었다.
+
+#### Complexity
+- time complexity: 
+- space complexity: 
+
+#### Code
+``` python
+from collections import deque
+
+class Solution:
+    def snakesAndLadders(self, board: List[List[int]]) -> int:
+        N = len(board)
+        bou = [0 for _ in range(N ** 2 + 1)]
+        visited = [False for _ in range(N ** 2 + 1)]
+        count = 0
+        for i in range(N):
+            for j in range(N):
+                bou[i * N + j + 1] = (N - 1 - i, j if count % 2 == 0 else N - 1 - j)
+            count += 1
+
+        q = deque([(1, 0)])
+        visited[1] = True
+
+        while q:
+            cord, d= q.popleft()
+            if cord == N ** 2:
+                return d
+
+            for i in range(1, 7):
+                next = min(cord + i, N ** 2)
+                i, j = bou[next]
+                if board[i][j] != -1:
+                    next = board[i][j]
+                
+                if not visited[next]:
+                    q.append((next, d + 1))
+                    visited[next] = True
+                    
+        return -1
+```
